fix nav parent icon shrinking if text is too long in Nav component

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -185,6 +185,7 @@ ul.uk-nav-sub {
  ========================================================================== */
 
 .uk-nav-parent-icon {
+    flex: none;
     margin-left: auto;
     transition: transform 0.3s ease-out;
 }
